'설정 없이 사용하기' 변경

--- a/zero_conf/package.json
+++ b/zero_conf/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack ./mysrc/input.js --output ./dist/output.js"
   },
   "keywords": [],
   "author": "",
